--- a/index.html
+++ b/index.html
@@ -5,45 +5,48 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>OK!Thess - Καλωσήλθες</title>
+	<title>OK!Thess | Οικοσύστημα Καινοτομίας Θεσσαλονίκης</title>
 	<meta http-equiv="Content-Type" content="text/html">
-	<meta name="description" content="LTo OK!Thess παρέχει χώρο και τεχνική υποστήριξη σε ομάδες ανθρώπων με καινοτόμες ιδέες. Προετοιμάζοντας τους για την είσοδο στην πραγματική αγορά">
+	<meta name="description" content="To OK!Thess παρέχει χώρο και τεχνική υποστήριξη σε ομάδες ανθρώπων με καινοτόμες ιδέες. Προετοιμάζοντας τους για την είσοδο στην πραγματική αγορά">
 	<meta name="robots" content="NOODP">
 	<meta name="author" content="ntemposd">
 
-	<!-- Schema.org markup for Google+ -->
 	<meta itemprop="name" content="ΟΚ!Thess">
-	<meta itemprop="description" content="Οικοσύστημα Καινοτομίας Θεσσαλονίκης">
-	<meta itemprop="image" content="img/logo.png">
+	<meta itemprop="description" content="To OK!Thess παρέχει χώρο και τεχνική υποστήριξη σε ομάδες ανθρώπων με καινοτόμες ιδέες. Προετοιμάζοντας τους για την είσοδο στην πραγματική αγορά">
+	<meta itemprop="image" content="/img/thumb.png">
 
-	<!-- Open Graph data -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@okthess">
+	<meta name="twitter:creator" content="@ntemposd">
+	<meta name="twitter:title" content="OK!Thess">
+	<meta name="twitter:description" content="To OK!Thess παρέχει χώρο και τεχνική υποστήριξη σε ομάδες ανθρώπων με καινοτόμες ιδέες. Προετοιμάζοντας τους για την είσοδο στην πραγματική αγορά">
+	<meta name="twitter:image" content="http://www.okthess.gr/img/thumb.png">
+
 	<meta property="og:title" content="ΟΚ!Thess">
-	<meta property="og:description" content="Οικοσύστημα Καινοτομίας Θεσσαλονίκης">
+	<meta property="og:description" content="To OK!Thess παρέχει χώρο και τεχνική υποστήριξη σε ομάδες ανθρώπων με καινοτόμες ιδέες. Προετοιμάζοντας τους για την είσοδο στην πραγματική αγορά">
 	<meta property="og:url" content="http://okthess.gr">
-	<meta property="og:image" content="img/logo.png">
+	<meta property="og:image" content="/img/thumb.png">
 	<meta property="og:type" content="website">
 
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style/main.css">
-	<link rel="stylesheet" type="text/css" href="style/landing.css">
+	<link rel="stylesheet" type="text/css" href="/style/main.css">
+	<link rel="stylesheet" type="text/css" href="/style/landing.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek,greek-ext" rel="stylesheet">
 	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-49294327-5', 'auto');
-  ga('send', 'pageview');
-
-</script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	  ga('create', 'UA-49294327-5', 'auto');
+	  ga('send', 'pageview');
+  </script>
 <body>
 <nav class="navbar navbar-default container-fluid">
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-				<span class="icon-bar"></span>
+     <span class="icon-bar"></span>
+     <span class="icon-bar"></span>
+		 <span class="icon-bar"></span>
 		</button>
 		<a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo"></a>
 	</div>
@@ -56,8 +59,6 @@
     				<li><a tabindex="-1" href="about.html#collapse1">Πως το κάνουμε</a></li>
     				<li><a tabindex="-1" href="about.html#collapse2">Πως συμμετέχω</a></li>
 						<li><a tabindex="-1" href="about.html#collapse3">Συνεργατικός χώρος</a></li>
-						<!--<li><a tabindex="-1" href="about.html#collapse4">Ποιοι είμαστε</a></li>
-						<li><a tabindex="-1" href="about.html#collapse5">Θέλεις να βοηθήσεις;</a></li>-->
       		</ul>
 			</li>
 			<li><a href="teams.html">Ομάδες</a></li>
@@ -77,71 +78,66 @@
   </div>
 </section>
 <div class="container">
-  <!-- Three columns of text below the carousel -->
   <div class="row marketing">
     <div class="col-md-3 col-sm-6">
-        <!-- <img class="img-circle" id="circle-1" src="img/MITEF.png" alt="" width="140" height="140"> -->
-      	<h2 id="land">MITEF<br>Competition</h2>
-        <p>Το MIT Enterprise Forum Greece σε συνεργασία με το Επιχειρηματικό Κέντρο του Anatolia School of Business at the American College of Thessaloniki, σας προσκαλούν στην εκδήλωση παρουσίασης του MITEF Greece Startup Competition.</p>
-        <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=1" role="button">Περισσότερα &raquo;</a></p>
-    </div><!-- /.col-lg-4 -->
+    	<h2 id="land">MITEF<br>Competition</h2>
+      <p>Το MIT Enterprise Forum Greece σε συνεργασία με το Επιχειρηματικό Κέντρο του Anatolia School of Business at the American College of Thessaloniki, σας προσκαλούν στην εκδήλωση παρουσίασης του MITEF Greece Startup Competition.</p>
+      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=1" role="button">Περισσότερα &raquo;</a></p>
+    </div>
     <div class="col-md-3 col-sm-6">
-        <!-- <img class="img-circle" id="circle-2" src="img/agrifood.jpg" alt="" width="140" height="140">-->
-        <h2>Agrifood<br>Masterclass</h2>
-        <p>Το ετήσιο Orange Grove Agri-Food Entrepreneurship Masterclass διεξήχθη φέτος για πρώτη φορά στις εγκαταστάσεις του OK!Thess στις 11-14 Νοεμβρίου 2016 και στο οποίο συμμετείχαν ομάδες/νεοφυείς επιχειρήσεις με δραστηριότητα.</p>
-        <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=2" role="button">Περισσότερα &raquo;</a></p>
-    </div><!-- /.col-lg-4 -->
+      <h2>Agrifood<br>Masterclass</h2>
+      <p>Το ετήσιο Orange Grove Agri-Food Entrepreneurship Masterclass διεξήχθη φέτος για πρώτη φορά στις εγκαταστάσεις του OK!Thess στις 11-14 Νοεμβρίου 2016 και στο οποίο συμμετείχαν ομάδες/νεοφυείς επιχειρήσεις με δραστηριότητα.</p>
+      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=2" role="button">Περισσότερα &raquo;</a></p>
+    </div>
     <div class="col-md-3 col-sm-6">
-    	  <!-- <img class="img-circle" id="circle-3" src="img/kepa.png" alt="" width="140" height="140">-->
-        <h2>Design for<br>Enterprises</h2>
-        <p>Το Κέντρο Επιχειρηματικής και Πολιτιστικής Ανάπτυξης (ΚΕΠΑ) και το OK!Thess, σε συνεργασία με το Design for Enterprises, συνδιοργανώνουν υπό την αιγίδα της Ευρωπαϊκής Επιτροπής το θεματικό εργαστήριο “Design for Enterprises”.</p>
-        <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=3" role="button">Περρισότερα &raquo;</a></p>
-    </div><!-- /.col-lg-4 -->
+      <h2>Design for<br>Enterprises</h2>
+      <p>Το Κέντρο Επιχειρηματικής και Πολιτιστικής Ανάπτυξης (ΚΕΠΑ) και το OK!Thess, σε συνεργασία με το Design for Enterprises, συνδιοργανώνουν υπό την αιγίδα της Ευρωπαϊκής Επιτροπής το θεματικό εργαστήριο “Design for Enterprises”.</p>
+      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=3" role="button">Περρισότερα &raquo;</a></p>
+    </div>
 		<div class="col-md-3 col-sm-6">
-    	  <!-- <img class="img-circle" id="circle-4" src="img/ICEIRD.png" alt="" width="140" height="140">-->
-        <h2>ICEIRD<br>2017</h2>
-        <p>Το OK!Thes συμμετέχει ως Business Partner στη διοργάνωση του 10ου Διεθνούς Συνεδρίου Επιχειρηματικότητας, Καινοτομίας και Περιφερειακής Ανάπτυξης, ICEIRD, που θα διεξαχθεί στις 31 Αυγούστου - 1 Σεπτεμβρίου 2017.</p>
-        <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=4" role="button">Περρισότερα &raquo;</a></p>
-    </div><!-- /.col-lg-4 -->
-  </div><!-- /.row -->
+      <h2>ICEIRD<br>2017</h2>
+      <p>Το OK!Thes συμμετέχει ως Business Partner στη διοργάνωση του 10ου Διεθνούς Συνεδρίου Επιχειρηματικότητας, Καινοτομίας και Περιφερειακής Ανάπτυξης, ICEIRD, που θα διεξαχθεί στις 31 Αυγούστου - 1 Σεπτεμβρίου 2017.</p>
+      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=4" role="button">Περρισότερα &raquo;</a></p>
+    </div>
+  </div>
 </div>
 <footer class="site-footer">
 	<div class="container">
 		<div class="row" id="social">
-			<a href="mailto:mail@okthess.gr" target="_blank"><img social src="img/email.png" alt="email"></a>
-			<a href="https://www.facebook.com/OKThess/" target="_blank"><img social src="img/facebook.png" alt="facebook"></a>
-			<a href="https://twitter.com/okthess" target="_blank"><img social src="img/twitter.png" alt="twitter"></a>
+			<a href="mailto:mail@okthess.gr" target="_blank"><img social src="/img/email.png" alt="email"></a>
+			<a href="https://www.facebook.com/OKThess/" target="_blank"><img social src="/img/facebook.png" alt="facebook"></a>
+			<a href="https://twitter.com/okthess" target="_blank"><img social src="/img/twitter.png" alt="twitter"></a>
 		</div>
 		<div class="row">
-				<div class="col-md-4 col-sm-4">
-					<h5>ΤΟΠΟΘΕΣΙΑ</h5>
-					<hr>
-						<div id="map-outer">
-							<div id="map-container"></div>
-							<script src="js/map.js"></script>
-						</div>
-				</div>
-					<div class="col-md-4 col-sm-4">
-						<h5>ΣΥΝΕΡΓΑΤΕΣ</h5><hr>
-						<a href="https://www.auth.gr/" target="_blank"><img src="img/AUTH.jpg" alt="Aristotle_University_Thessaloniki"></a>
-						<a href="http://www.thessaloniki.gr/" target="_blank"><img src="img/municipality.jpg" alt="Municipality_of_Thessaloniki"></a>
-						<a href="http://www.uom.gr/" target="_blank"><img src="img/UOM.png" alt="University_Of_Macedonia"></a>
-						<a href="http://www.thessinnozone.gr/" target="_blank"><img src="img/TIZ.jpg" alt="Thessaloniki_Innovation_Zone"></a>
-						<a href="http://www.teithe.gr/" target="_blank"><img src="img/ATEITH.jpg" alt="Alexander_Technological_Institute_Thessaloniki"></a>
-						<a href="http://www.sbbe.gr/" target="_blank"><img src="img/SBBE.jpg" alt="SBBE"></a>
-						<a href="http://www.ihu.edu.gr/" target="_blank"><img src="img/IHU.jpg" alt="International_Hellenic_University"></a>
-						<a href="http://www.seve.gr/" target="_blank"><img src="img/SEVE.jpg" alt="SEVE"></a>
-					</div>
-					<div class="col-md-4 col-sm-4">
-						<h5>ΥΠΟΣΤΗΡΙΚΤΕΣ</h5><hr>
-						<a href="http://www.hcn.gr/" target="_blank"><img src="img/hcn.jpg" alt="HCN"></a>
-						<a href="http://www.beetroot.gr/" target="_blank"><img src="img/beetroot.png" alt="Beetroot"></a>
-						<a href="https://www.ast.gr/" target="_blank"><img src="img/ast.png" alt="AST"></a>
-						<h5>ΔΩΡΗΤΗΣ</h5><hr>
-						<a href="http://www.snf.org/el/" target="_blank"><img src="img/ISN.jpg" alt="ISN"></a>
+			<div class="col-md-4 col-sm-4">
+				<h5>ΤΟΠΟΘΕΣΙΑ</h5>
+				<hr>
+					<div id="map-outer">
+						<div id="map-container"></div>
+						<script src="/js/map.js"></script>
 					</div>
 			</div>
+			<div class="col-md-4 col-sm-4">
+				<h5>ΣΥΝΕΡΓΑΤΕΣ</h5><hr>
+				<a href="https://www.auth.gr/" target="_blank"><img src="/img/AUTH.jpg" alt="Aristotle_University_Thessaloniki"></a>
+				<a href="http://www.thessaloniki.gr/" target="_blank"><img src="/img/municipality.jpg" alt="Municipality_of_Thessaloniki"></a>
+				<a href="http://www.uom.gr/" target="_blank"><img src="/img/UOM.png" alt="University_Of_Macedonia"></a>
+				<a href="http://www.thessinnozone.gr/" target="_blank"><img src="/img/TIZ.jpg" alt="Thessaloniki_Innovation_Zone"></a>
+				<a href="http://www.teithe.gr/" target="_blank"><img src="/img/ATEITH.jpg" alt="Alexander_Technological_Institute_Thessaloniki"></a>
+				<a href="http://www.sbbe.gr/" target="_blank"><img src="/img/SBBE.jpg" alt="SBBE"></a>
+				<a href="http://www.ihu.edu.gr/" target="_blank"><img src="/img/IHU.jpg" alt="International_Hellenic_University"></a>
+				<a href="http://www.seve.gr/" target="_blank"><img src="/img/SEVE.jpg" alt="SEVE"></a>
+			</div>
+			<div class="col-md-4 col-sm-4">
+				<h5>ΥΠΟΣΤΗΡΙΚΤΕΣ</h5><hr>
+				<a href="http://www.hcn.gr/" target="_blank"><img src="/img/hcn.jpg" alt="HCN"></a>
+				<a href="http://www.beetroot.gr/" target="_blank"><img src="/img/beetroot.png" alt="Beetroot"></a>
+				<a href="https://www.ast.gr/" target="_blank"><img src="/img/ast.png" alt="AST"></a>
+				<h5>ΔΩΡΗΤΗΣ</h5><hr>
+				<a href="http://www.snf.org/el/" target="_blank"><img src="/img/ISN.jpg" alt="ISN"></a>
+			</div>
 		</div>
+	</div>
 		<p id="copy">Lovingly crafted by <a href="http://ntemposd.me" target="_blank">ntemposd</a></p>
 </footer>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7E2raajPS5-4vEpx-LBOV0XkItvWQRt8&signed_in=true&callback=initMap"></script>
