--- a/teams.html
+++ b/teams.html
@@ -1,179 +1,152 @@
 <!DOCTYPE html>
 <html lang="gr" itemscope itemtype="https://schema.org/ProfessionalService">
-
 <head>
 	<meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>OK!Thess - Φιλοξενούμενες Ομάδες</title>
+	<title>OK!Thess | Φιλοξενούμενες Ομάδες</title>
 	<meta http-equiv="Content-Type" content="text/html">
 	<meta name="description" content="Startups που συμμετέχουν στο πρόγραμμα επιτάχυνσης του OK!Thess.">
 	<meta name="robots" content="NOODP">
 	<meta name="author" content="ntemposd">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<!-- Schema.org markup for Google+ -->
 	<meta itemprop="name" content="OK!Thess">
-	<meta itemprop="description" content="Οικοσύστημα Καινοτομίας Θεσσαλονίκης">
-	<meta itemprop="image" content="img/logo.png">
+	<meta itemprop="description" content="Startups που συμμετέχουν στο πρόγραμμα επιτάχυνσης του OK!Thess.">
+	<meta itemprop="image" content="/img/thumb.png">
 
-	<!-- Open Graph data -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@okthess">
+	<meta name="twitter:creator" content="@ntemposd">
+	<meta name="twitter:title" content="OK!Thess">
+	<meta name="twitter:description" content="Startups που συμμετέχουν στο πρόγραμμα επιτάχυνσης του OK!Thess.">
+	<meta name="twitter:image" content="http://www.okthess.gr/img/thumb.png">
+
 	<meta property="og:title" content="OK!Thess">
-	<meta property="og:description" content="Οικοσύστημα Καινοτομίας Θεσσαλονίκης">
+	<meta property="og:description" content="Startups που συμμετέχουν στο πρόγραμμα επιτάχυνσης του OK!Thess.">
 	<meta property="og:url" content="http://www.okthess.gr/">
-	<meta property="og:image" content="img/logo.png">
+	<meta property="og:image" content="/img/thumb.png">
 	<meta property="og:type" content="website">
 
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style/main.css">
-  <link rel="stylesheet" type="text/css" href="style/teams.css">
+	<link rel="stylesheet" type="text/css" href="/style/main.css">
+  <link rel="stylesheet" type="text/css" href="/style/teams.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek,greek-ext" rel="stylesheet">
 	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-49294327-5', 'auto');
-  ga('send', 'pageview');
-
-</script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	  ga('create', 'UA-49294327-5', 'auto');
+	  ga('send', 'pageview');
+  </script>
 </head>
 <body>
-	<nav class="navbar navbar-default container-fluid">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo"></a>
-		</div>
-		 <div class="collapse navbar-collapse" id="navbar-collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Σχετικά <b class="caret"></b></a>
-	  				<ul class="dropdown-menu">
-	    				<li><a tabindex="-1" href="about.html#collapse0">Τι κάνουμε</a></li>
-	    				<li><a tabindex="-1" href="about.html#collapse1">Πως το κάνουμε</a></li>
-	    				<li><a tabindex="-1" href="about.html#collapse2">Πως συμμετέχω</a></li>
-							<li><a tabindex="-1" href="about.html#collapse3">Συνεργατικός χώρος</a></li>
-							<!--<li><a tabindex="-1" href="about.html#collapse4">Ποιοι είμαστε</a></li>
-							<li><a tabindex="-1" href="about.html#collapse5">Θέλεις να βοηθήσεις;</a></li>-->
-	      		</ul>
-				</li>
-				<li class="active"><a href="teams.html">Ομάδες</a></li>
-	      <li><a href="news.html">Νέα</a></li>
-	      <li><a href="knowledge-base.html">Γνωσιακή Βάση</a></li>
-				<li><a href="app.php">Συμμετοχή</a></li>
-				<li><a href="hi.php">Επικοινωνία</a></li>
-	      <li><a href="under-construction.html">Μέλη</a></li>
-			</ul>
-		</div>
-	</nav>
-	<section class="jumbotron">
-	  <div class="container">
-			<h1>Φιλοξενούμενες ομάδες</h1>
-			<p>Startups που συμμετέχουν στο πρόγραμμα επιτάχυνσης του OK!Thess.</p>
-	  </div>
-	</section>
-
-	<div class="album text-muted">
-      <div class="container">
-
-        <div class="row">
-          <div class="card">
-						<a href="http://www.k-invent.com/" target="_blank">
-            	<img src="img/teams/kinvent.png" alt="kinvent_logo">
-						</a>
-						<p class="card-text">Στην KINVENT σχεδιάζουμε και δημιουργούμε καινοτόμα προϊόντα ανάλυσης και μέτρησης υψηλής ακρίβειας της ανθρώπινης κίνησης.</p>
-          </div>
-					<div class="card">
-						<a href="https://elektroniowheels.gr/" target="_blank">
-							<img src="img/teams/electronio.png" alt="electronio_logo">
-						</a>
-						<p class="card-text">Το Elektronio είναι μία βραβευμένη startup, η οποία κατασκευάζει premium ηλεκτρικά ποδήλατα με έναν επαναστατικό σχεδιασμό.</p>
-          </div>
-					<!--
-					<div class="card">
-            <img src="img/teams/electronio.png" class="img-fluid" alt="Team_Name">
-						<h3>Team Name</h3>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-        </div>-->
-
+<nav class="navbar navbar-default container-fluid">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo"></a>
+	</div>
+	<div class="collapse navbar-collapse" id="navbar-collapse">
+		<ul class="nav navbar-nav navbar-right">
+			<li class="dropdown">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Σχετικά <b class="caret"></b></a>
+  				<ul class="dropdown-menu">
+    				<li><a tabindex="-1" href="about.html#collapse0">Τι κάνουμε</a></li>
+    				<li><a tabindex="-1" href="about.html#collapse1">Πως το κάνουμε</a></li>
+    				<li><a tabindex="-1" href="about.html#collapse2">Πως συμμετέχω</a></li>
+						<li><a tabindex="-1" href="about.html#collapse3">Συνεργατικός χώρος</a></li>
+      		</ul>
+			</li>
+			<li class="active"><a href="teams.html">Ομάδες</a></li>
+      <li><a href="news.html">Νέα</a></li>
+      <li><a href="knowledge-base.html">Γνωσιακή Βάση</a></li>
+			<li><a href="app.php">Συμμετοχή</a></li>
+			<li><a href="hi.php">Επικοινωνία</a></li>
+      <li><a href="under-construction.html">Μέλη</a></li>
+		</ul>
+  </div>
+</nav>
+<section class="jumbotron">
+  <div class="container">
+		<h1>Φιλοξενούμενες ομάδες</h1>
+		<p>Startups που συμμετέχουν στο πρόγραμμα επιτάχυνσης του OK!Thess.</p>
+  </div>
+</section>
+<div class="album text-muted">
+  <div class="container">
+    <div class="row">
+      <div class="card">
+				<a href="http://www.k-invent.com/" target="_blank">
+        	<img src="/img/teams/kinvent.png" alt="kinvent_logo">
+				</a>
+				<p class="card-text">Στην KINVENT σχεδιάζουμε και δημιουργούμε καινοτόμα προϊόντα ανάλυσης και μέτρησης υψηλής ακρίβειας της ανθρώπινης κίνησης.</p>
       </div>
-    </div>
-		<footer class="site-footer">
-			<div class="container">
-				<div class="row" id="social">
-					<a href="mailto:mail@okthess.gr" target="_blank"><img social src="img/email.png" alt="email"></a>
-					<a href="https://www.facebook.com/OKThess/" target="_blank"><img social src="img/facebook.png" alt="facebook"></a>
-					<a href="https://twitter.com/okthess" target="_blank"><img social src="img/twitter.png" alt="twitter"></a>
-				</div>
-				<div class="row">
-						<div class="col-md-4 col-sm-4">
-							<h5>ΤΟΠΟΘΕΣΙΑ</h5>
-							<hr>
-								<div id="map-outer">
-									<div id="map-container"></div>
-									<script src="js/map.js"></script>
-								</div>
-						</div>
-							<div class="col-md-4 col-sm-4">
-								<h5>ΣΥΝΕΡΓΑΤΕΣ</h5><hr>
-								<a href="https://www.auth.gr/" target="_blank"><img src="img/AUTH.jpg" alt="Aristotle_University_Thessaloniki"></a>
-								<a href="http://www.thessaloniki.gr/" target="_blank"><img src="img/municipality.jpg" alt="Municipality_of_Thessaloniki"></a>
-								<a href="http://www.uom.gr/" target="_blank"><img src="img/UOM.png" alt="University_Of_Macedonia"></a>
-								<a href="http://www.thessinnozone.gr/" target="_blank"><img src="img/TIZ.jpg" alt="Thessaloniki_Innovation_Zone"></a>
-								<a href="http://www.teithe.gr/" target="_blank"><img src="img/ATEITH.jpg" alt="Alexander_Technological_Institute_Thessaloniki"></a>
-								<a href="http://www.sbbe.gr/" target="_blank"><img src="img/SBBE.jpg" alt="SBBE"></a>
-								<a href="http://www.ihu.edu.gr/" target="_blank"><img src="img/IHU.jpg" alt="International_Hellenic_University"></a>
-								<a href="http://www.seve.gr/" target="_blank"><img src="img/SEVE.jpg" alt="SEVE"></a>
-							</div>
-							<div class="col-md-4 col-sm-4">
-								<h5>ΥΠΟΣΤΗΡΙΚΤΕΣ</h5><hr>
-								<a href="http://www.hcn.gr/" target="_blank"><img src="img/hcn.jpg" alt="HCN"></a>
-								<a href="http://www.beetroot.gr/" target="_blank"><img src="img/beetroot.png" alt="Beetroot"></a>
-								<a href="https://www.ast.gr/" target="_blank"><img src="img/ast.png" alt="AST"></a>
-								<h5>ΔΩΡΗΤΗΣ</h5><hr>
-								<a href="http://www.snf.org/el/" target="_blank"><img src="img/ISN.jpg" alt="ISN"></a>
-							</div>
+			<div class="card">
+				<a href="https://elektroniowheels.gr/" target="_blank">
+					<img src="/img/teams/electronio.png" alt="electronio_logo">
+				</a>
+				<p class="card-text">Το Elektronio είναι μία βραβευμένη startup, η οποία κατασκευάζει premium ηλεκτρικά ποδήλατα με έναν επαναστατικό σχεδιασμό.</p>
+      </div>
+			<div class="card">
+				<a href="http://www.bio2chp.com" target="_blank">
+					<img src="/img/teams/BIO2CHP.png" alt="BIO2CHP_logo">
+				</a>
+				<p class="card-text">Η BIO2CHP προσφέρει σε επιχειρήσεις με οργανικά απόβλητα μια γεννήτρια η οποία μετατρέπει οργανική ύλη σε χαμηλού κόστους πράσινη ενέργεια.</p>
+      </div>
+			<div class="card">
+				<a href="http://greektasty.com" target="_blank">
+					<img src="/img/teams/Greek-Tasty.png" alt="Greek_Tasty_logo">
+				</a>
+				<p class="card-text">Το Greek Tasty είναι ένα υπερσύγχρονο online store με εκλεκτά Ελληνικά τρόφιμα για την αγορά των Η.Π.Α.</p>
+      </div>
+  </div>
+</div>
+<footer class="site-footer">
+	<div class="container">
+		<div class="row" id="social">
+			<a href="mailto:mail@okthess.gr" target="_blank"><img social src="/img/email.png" alt="email"></a>
+			<a href="https://www.facebook.com/OKThess/" target="_blank"><img social src="/img/facebook.png" alt="facebook"></a>
+			<a href="https://twitter.com/okthess" target="_blank"><img social src="/img/twitter.png" alt="twitter"></a>
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-sm-4">
+				<h5>ΤΟΠΟΘΕΣΙΑ</h5>
+				<hr>
+					<div id="map-outer">
+						<div id="map-container"></div>
+						<script src="/js/map.js"></script>
 					</div>
-				</div>
-				<p id="copy">Lovingly crafted by <a href="http://ntemposd.me" target="_blank">ntemposd</a></p>
-		</footer>
-		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7E2raajPS5-4vEpx-LBOV0XkItvWQRt8&signed_in=true&callback=initMap"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script src="js/main.js"></script>
-
+			</div>
+			<div class="col-md-4 col-sm-4">
+				<h5>ΣΥΝΕΡΓΑΤΕΣ</h5><hr>
+				<a href="https://www.auth.gr/" target="_blank"><img src="/img/AUTH.jpg" alt="Aristotle_University_Thessaloniki"></a>
+				<a href="http://www.thessaloniki.gr/" target="_blank"><img src="/img/municipality.jpg" alt="Municipality_of_Thessaloniki"></a>
+				<a href="http://www.uom.gr/" target="_blank"><img src="/img/UOM.png" alt="University_Of_Macedonia"></a>
+				<a href="http://www.thessinnozone.gr/" target="_blank"><img src="/img/TIZ.jpg" alt="Thessaloniki_Innovation_Zone"></a>
+				<a href="http://www.teithe.gr/" target="_blank"><img src="/img/ATEITH.jpg" alt="Alexander_Technological_Institute_Thessaloniki"></a>
+				<a href="http://www.sbbe.gr/" target="_blank"><img src="/img/SBBE.jpg" alt="SBBE"></a>
+				<a href="http://www.ihu.edu.gr/" target="_blank"><img src="/img/IHU.jpg" alt="International_Hellenic_University"></a>
+				<a href="http://www.seve.gr/" target="_blank"><img src="/img/SEVE.jpg" alt="SEVE"></a>
+			</div>
+			<div class="col-md-4 col-sm-4">
+				<h5>ΥΠΟΣΤΗΡΙΚΤΕΣ</h5><hr>
+				<a href="http://www.hcn.gr/" target="_blank"><img src="/img/hcn.jpg" alt="HCN"></a>
+				<a href="http://www.beetroot.gr/" target="_blank"><img src="/img/beetroot.png" alt="Beetroot"></a>
+				<a href="https://www.ast.gr/" target="_blank"><img src="/img/ast.png" alt="AST"></a>
+				<h5>ΔΩΡΗΤΗΣ</h5><hr>
+				<a href="http://www.snf.org/el/" target="_blank"><img src="/img/ISN.jpg" alt="ISN"></a>
+			</div>
+		</div>
+	</div>
+		<p id="copy">Lovingly crafted by <a href="http://ntemposd.me" target="_blank">ntemposd</a></p>
+</footer>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7E2raajPS5-4vEpx-LBOV0XkItvWQRt8&signed_in=true&callback=initMap"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
