--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
 	 </ul>
 	</div>
 </nav>
+<span id="lang"><a href="http://okthess.gr/eng/about.html">Eng</a></span>
 <div class="container">
 	<div class="row">
 	  <div class="panel-group" id="accordion">
@@ -73,12 +74,12 @@
 							<p>Ο ευρύς στόχος του OK!Thess είναι η ουσιώδης συμβολή στην δημιουργία ενός οικοσυστήματος καινοτομίας. Ένα τέτοιο οικοσύστημα θα περιλάμβανε αφ’ ενός όλους όσους είναι σε θέση και επιθυμούν να συμβάλλουν στην ανάπτυξη της καινοτομίας στην πόλη και αφ’ ετέρου όλες τις λειτουργίες που είναι απαραίτητες για την υγιή μεγέθυνση του οικοσυστήματος του ίδιου. Ένα τέτοιο οικοσύστημα θα περιλάμβανε τα εξής:</p>
 								<ul>
 									<li><strong>Πηγές ανθρώπων με υποσχόμενες καινοτόμες ιδέες:</strong> Τέτοιες πηγές είναι τα πανεπιστήμια και τα ΤΕΙ αλλά και η κοινωνία γενικότερα καθώς λαμπρές ιδέες μπορούν να ξεκινήσουν από οπουδήποτε.</li>
-									<li><strong>Διαδικασίες που συμβάλλουν στην μετατροπή πρωτόλειων ιδεών σε βιώσιμες προτάσεις:</strong> Αυτές μπορεί να περιλαμβάνουν συμβουλευτική, διαλέξεις, διαγωνισμούς, κατάρτιση, συναναστροφές και δημιουργία καινοτόμων κοινοτήτων και ότι άλλο συμβάλλει με αυτό τον τρόπο.</li>
+									<li><strong>Διαδικασίες που συμβάλλουν στην μετατροπή πρωτόλειων ιδεών σε βιώσιμες προτάσεις:</strong> Αυτές μπορεί να περιλαμβάνουν συμβουλευτική, διαλέξεις, διαγωνισμούς, κατάρτιση, συναναστροφές και δημιουργία καινοτόμων κοινοτήτων και ό,τι άλλο συμβάλλει με αυτό τον τρόπο.</li>
 									<li><strong>Υποδομές:</strong> Αυτές θα στηρίξουν διαδικασίες όπως αυτές που περιγράφηκαν αλλά και θα δώσουν την δυνατότητα σε νεοφυείς οντότητες να «δοκιμαστούν» και πολλές από αυτές να «επιζήσουν» πριν καταλήξουν, έτοιμες, σε κάποιον από τους προορισμούς του οικοσυστήματος.</li>
   								<li><strong>Προορισμούς των δοκιμασμένων και υποσχόμενων νεοφυών οντοτήτων:</strong> Αυτοί οι προορισμοί περιλαμβάνουν κατά κύριο λόγο το πάντρεμα των καλυτέρων ιδεών με επενδυτικά κεφάλαια που θα αναπτυχθούν παραπάνω σε τεχνολογικά πάρκα, αλλά και αυτοτελώς.</li>
 								</ul>
 						<br>
-							<p>Το οικοσύστημα αυτό θα είναι ανοικτό σε όλους τους επιχειρηματικούς και εκπαιδευτικούς φορείς της πόλης για να εγκολπώσει όλες της προσπάθειες που κινούνται στην κατεύθυνση της καινοτομίας και της επιχειρηματικότητας. Για την στήριξη του οικοσυστήματος, θα δημιουργηθούν συνθήκες χώρου και υπηρεσιών που να επιτρέπουν σε έναν αριθμό οντοτήτων με νέες και δυνητικά εμπορεύσιμες επιχειρηματικές ιδέες – είτε προϊόντα έρευνας είτε όχι – να τις επεξεργαστούν για ένα διάστημα απαλλαγμένες από άλλα βάρη στην προσπάθεια τους.</p>
+							<p>Το οικοσύστημα αυτό θα είναι ανοικτό σε όλους τους επιχειρηματικούς και εκπαιδευτικούς φορείς της πόλης για να εγκολπώσει όλες τις προσπάθειες που κινούνται στην κατεύθυνση της καινοτομίας και της επιχειρηματικότητας. Για την στήριξη του οικοσυστήματος, θα δημιουργηθούν συνθήκες χώρου και υπηρεσιών που να επιτρέπουν σε έναν αριθμό οντοτήτων με νέες και δυνητικά εμπορεύσιμες επιχειρηματικές ιδέες – είτε προϊόντα έρευνας είτε όχι – να τις επεξεργαστούν για ένα διάστημα απαλλαγμένες από άλλα βάρη στην προσπάθεια τους.</p>
 						<br>
 							<p><strong>Η προσπάθεια υλοποίησης του στόχου ξεκινάει με το άνοιγμα της προ-θερμοκοιτίδας του OK!Thess, η οποία προσφέρει τις παρακάτω υπηρεσίες:</strong></p>
 								<ul>
@@ -98,10 +99,10 @@
 	        <div id="collapse1" class="panel-collapse collapse">
 	          <div class="panel-body">
 							<h3><strong>Σύνδεση ομάδων με Μέντορες</strong></h3>
-							<p>Σε ετήσια βάση προβλέπεται η διεξαγωγή 30 συναντήσεων τέτοιου είδους οι οποίες στοχεύουν στην υιοθέτηση νεοφυών οµάδων από µέντορες. Ως Mentoring ορίζεται η συχνή διάδραση των ομάδων του οικοσυστήματος με ανθρώπους που φέρουν εξειδικευμένη εμπειρία της αγοράς στόχου της ομάδας που έχουν αναλλάβει. Μέσα απο την συναναστροφή με τους μέντορες, η ομάδα οριμάζει και ιδανικά αποφεύγει καταστάσεις που καθυστερούναι την επίτευξη στόχων και οροσήμων κατά την επιχειρηματική της ανάπτυξη.</p>
+							<p>Σε ετήσια βάση προβλέπεται η διεξαγωγή 30 συναντήσεων τέτοιου είδους οι οποίες στοχεύουν στην υιοθέτηση νεοφυών οµάδων από µέντορες. Ως Mentoring ορίζεται η συχνή διάδραση των ομάδων του οικοσυστήματος με ανθρώπους που φέρουν εξειδικευμένη εμπειρία της αγοράς στόχου της ομάδας που έχουν αναλάβει. Μέσα απο την συναναστροφή με τους μέντορες, η ομάδα ωριμάζει και ιδανικά αποφεύγει καταστάσεις που καθυστερούνε την επίτευξη στόχων και οροσήμων κατά την επιχειρηματική της ανάπτυξη.</p>
 						<br>
 							<h3><strong>Συνεργατικές τεχνικές συναντήσεις</strong></h3>
-							<p>Το OK!Thess θα απευθυνθεί στο ευρύτερο οικοσύστηµα της περιοχής και να συνεργαστεί µε φορείς εξειδικευµένης θεµατολογίας ή / και γεωγραφικής εµβέλειας. Με αυτό το σκεπτικό, προβλέπεται η συνδιοργάνωση διαφόρων τύπων εκδηλώσεων (boot camps, speed dating events κλπ). Προβλέπεται η συνδιοργάνωση 6 εκδηλώσεων σε ετήσια βάση.</p>
+							<p>Το OK!Thess θα απευθυνθεί στο ευρύτερο οικοσύστηµα της περιοχής και θα συνεργαστεί µε φορείς εξειδικευµένης θεµατολογίας ή / και γεωγραφικής εµβέλειας. Με αυτό το σκεπτικό, προβλέπεται η συνδιοργάνωση διαφόρων τύπων εκδηλώσεων (boot camps, speed dating events κλπ). Προβλέπεται η συνδιοργάνωση 6 εκδηλώσεων σε ετήσια βάση.</p>
 						<br>
 							<h3><strong>Εκδηλώσεις ποικίλου χαρακτήρα</strong></h3>
 							<p>Το όλο οικοσύστηµα καινοτοµίας που δηµιουργείται µε επίκεντρο το OK!Thess πλαισιώνεται από σειρά εκδηλώσεων: επιστηµονικού χαρακτήρα µε προσκεκληµένους διακεκριµένους οµιλητές διεθνούς φήµης, validation events διαδραστικού χαρακτήρα εκδηλώσεις όπου το κοινό συµµετέχει δίνοντας πολύτιµη ανάδραση στους διοργανωτές, demo days εκδηλώσεις που δίνουν την ευκαιρία σε νεοφυείς οµάδες να προσεγγίσουν επενδυτές. Συνολικά προβλέπεται η διοργάνωση 10 εκδηλώσεων ποικίλου χαρακτήρα σε ετήσια βάση.</p>
