--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 		</ul>
 	</div>
 </nav>
-<span id="beta"><strong>BETA</strong></span>
+<span id="beta"><strong>Beta</strong></span>
+<span id="lang"><a href="http://okthess.gr/eng/">Eng</a></span>
 <section class="jumbotron">
   <div class="container text-center">
 		<h1>Συνεργάτης<br>στα πρώτα βήματα</h1>
@@ -92,15 +93,61 @@
     <div class="col-md-3 col-sm-6">
       <h2>Design for<br>Enterprises</h2>
       <p>Το Κέντρο Επιχειρηματικής και Πολιτιστικής Ανάπτυξης (ΚΕΠΑ) και το OK!Thess, σε συνεργασία με το Design for Enterprises, συνδιοργανώνουν υπό την αιγίδα της Ευρωπαϊκής Επιτροπής το θεματικό εργαστήριο “Design for Enterprises”.</p>
-      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=3" role="button">Περρισότερα &raquo;</a></p>
+      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=3" role="button">Περισσότερα &raquo;</a></p>
     </div>
 		<div class="col-md-3 col-sm-6">
       <h2>ICEIRD<br>2017</h2>
-      <p>Το OK!Thes συμμετέχει ως Business Partner στη διοργάνωση του 10ου Διεθνούς Συνεδρίου Επιχειρηματικότητας, Καινοτομίας και Περιφερειακής Ανάπτυξης, ICEIRD, που θα διεξαχθεί στις 31 Αυγούστου - 1 Σεπτεμβρίου 2017.</p>
-      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=4" role="button">Περρισότερα &raquo;</a></p>
+      <p>Είσαι ακαδημαϊκός, επιχειρηματίας, επενδυτής ή επιχείρηση που ενδιαφέρεται για τη θεωρία και την πρακτική των δεσμών μεταξύ πανεπιστημίων και βιομηχανίας, καθώς και την καινοτομία, την επιχειρηματικότητα; Κατέθεσε την πρόταση σου μέχρι τις 20 Ιανουαρίου 2017.</p>
+      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=4" role="button">Περισσότερα &raquo;</a></p>
     </div>
   </div>
 </div>
+<!-- Calendar
+<a name="calendar"></a>
+<section class="row upcoming_recent_events style2">
+    <div class="container">
+        <div class="row sectionTitle text-center">
+            <h6 class="label label-default">SKGTech Events</h6>
+            <h3>Noteworthy events and happenings in the city</h3>
+        </div>
+        <div class="row" id="upcoming-events">
+
+            <div id="event-item">
+            <div class="loading"></div>
+            <div class="col-sm-12 col-md-6 upcoming_events_sizer"></div>
+            <div class="col-sm-12 col-md-6 upcoming_events hide">
+
+                <div class="row event_cover_photo">
+                    <img src="" alt="" class="img-responsive">
+                    <div class="upcoming_label label"><i class="fa fa-calendar"></i> <span>August 15 - 18:00</span></div>
+                    <h6 class="event_time_loc">
+                        <span class="loc">Hosted at: <span class="location"></span></span>
+                    </h6>
+                </div>
+                <h4 class="event_title"><a href="single-event.html"><span>Node.js Meetup</span></a></h4>
+                <p class="event_summery">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dapibus diam, ut fringilla purus efficitur eget. Morbi sagittis mi ac eros semper pharetra. Praesent sed purus purus.</p>
+                <div class="row shareOnRow m0">
+                    <ul class="list-unstyled">
+                        <li>SHARE IT</li>
+                        <li><a class="facebook-url" href="" rel="nofollow" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a class="twitter-url" href="" rel="nofollow" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            </div>
+
+        </div>
+        calendar maintainer shesharp
+        <div class="row maintainer">
+            <div class="col-md-4 col-md-offset-4">
+                <h4>Calendar kindly maintained by</h4>
+                <a href="http://www.shesharp.org/"><img src="/assets/img/shesharp-logo-small.png" alt="shesharp" class="img-responsive center-block"></a>
+
+            </div>
+        </div>
+
+    </div>
+</section>-->
 <footer class="site-footer">
 	<div class="container">
 		<div class="row" id="social">
