--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -70,6 +70,7 @@
 		</ul>
 	 </div>
 </nav>
+<span id="lang"><a href="http://okthess.gr/eng/knowledge-base.html">Eng</a></span>
 <section class="jumbotron">
   <div class="container">
    <h1>Γνωσιακή Βάση</h1>
