--- a/news.html
+++ b/news.html
@@ -43,33 +43,34 @@
 </head>
 <body>
 <nav class="navbar navbar-default container-fluid">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-	     <span class="icon-bar"></span>
-	     <span class="icon-bar"></span>
-			 <span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo"></a>
-		</div>
-		<div class="collapse navbar-collapse" id="navbar-collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Σχετικά <b class="caret"></b></a>
-	  			<ul class="dropdown-menu">
-						<li><a tabindex="-1" href="about.html#collapse0">Τι κάνουμε</a></li>
-	    			<li><a tabindex="-1" href="about.html#collapse1">Πως το κάνουμε</a></li>
-	    			<li><a tabindex="-1" href="about.html#collapse2">Πως συμμετέχω</a></li>
-						<li><a tabindex="-1" href="about.html#collapse3">Συνεργατικός χώρος</a></li>
-	      	</ul>
-				</li>
-				<li><a href="teams.html">Ομάδες</a></li>
-	      <li class="active"><a href="news.html">Νέα</a></li>
-	      <li><a href="knowledge-base.html">Γνωσιακή Βάση</a></li>
-				<li><a href="app.php">Συμμετοχή</a></li>
-				<li><a href="hi.php">Επικοινωνία</a></li>
-	      <li><a href="under-construction.html">Μέλη</a></li>
-			</ul>
-		</div>
-	</nav>
+ <div class="navbar-header">
+  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+	 <span class="icon-bar"></span>
+	 <span class="icon-bar"></span>
+	 <span class="icon-bar"></span>
+	</button>
+	<a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo"></a>
+ </div>
+ <div class="collapse navbar-collapse" id="navbar-collapse">
+	<ul class="nav navbar-nav navbar-right">
+	 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Σχετικά <b class="caret"></b></a>
+  	<ul class="dropdown-menu">
+		 <li><a tabindex="-1" href="about.html#collapse0">Τι κάνουμε</a></li>
+     <li><a tabindex="-1" href="about.html#collapse1">Πως το κάνουμε</a></li>
+     <li><a tabindex="-1" href="about.html#collapse2">Πως συμμετέχω</a></li>
+		 <li><a tabindex="-1" href="about.html#collapse3">Συνεργατικός χώρος</a></li>
+    </ul>
+	 </li>
+	 <li><a href="teams.html">Ομάδες</a></li>
+   <li class="active"><a href="news.html">Νέα</a></li>
+   <li><a href="knowledge-base.html">Γνωσιακή Βάση</a></li>
+	 <li><a href="app.php">Συμμετοχή</a></li>
+	 <li><a href="hi.php">Επικοινωνία</a></li>
+   <li><a href="under-construction.html">Μέλη</a></li>
+	</ul>
+ </div>
+</nav>
+<span id="lang"><a href="http://okthess.gr/eng/news.html">Eng</a></span>
 <section class="jumbotron">
   <div class="container">
     <h1>Τα Νέα του Οικοσυστήματος</h1>
@@ -157,7 +158,7 @@
 								<ul>
 									<li>Καινοτομήσουν</li>
 									<li>Επαναπροσδιορίσουν τη στρατηγική τους</li>
-										<li>Αναπτύξουν τις παρεχόμενες υπηρεσίες / προϊόντα τους</li>
+									<li>Αναπτύξουν τις παρεχόμενες υπηρεσίες/προϊόντα τους</li>
 									<li>Βελτιώσουν την εμπειρία του χρήστη/πελάτη</li>
 								</ul>
 							<br>
@@ -219,8 +220,7 @@
 							<h2 class="blog-post-title">BUSINESS ANGELS Investment Forum III</h2>
 							<p>Το BUSINESS ANGELS Investment Forum III διοργανώθηκε με μεγάλη επιτυχία στους χώρους της προ-θερμοκοιτίδας “ΟΚ!Thess” στη Θεσσαλονίκη, από την ΑΤΛΑΝΤΙΣ Συμβουλευτική και το Innovation Farm. </p>
 							<br>
-							<blockquote><img src="https://scontent.fath1-1.fna.fbcdn.net/t31.0-8/14876553_368842840120131_4544513853941129226_o.jpg"></img></blockquote>
-							<br>
+							<!--<blockquote><img src="https://scontent.fath1-1.fna.fbcdn.net/t31.0-8/14876553_368842840120131_4544513853941129226_o.jpg"></img></blockquote>-->
 							<p>14 start up είχαν την ευκαιρία να παρουσιάσουν τα επιχειρηματικά τους σχέδια σ΄ένα πολύ μεγάλο αριθμό Business Angels, εκπροσώπους από funds και άλλους θεσμικούς επενδυτές από την Ελλάδα και το εξωτερικό, ενώ η ζωντανή μετάδοση του Forum προσέλκυσε συνολικά πάνω από 130 επισκέπτες (livestreaming viewers) από δίκτυα επιχειρηματικών αγγέλων καθώς και από μεμονωμένους επενδυτές. Οι start up που συμμετείχαν εξέφρασαν την ικανοποίησή τους για τα αποτελέσματα.</p>
 							<p>Διάβασε το επίσημο δελτίο τύπου για την εκδήλωση<a href="http://www.atlantisresearch.gr/files/business_angels_forum_3.pdf" target="_blank"> εδώ.</a>
 						</div>
