--- a/eng/under-construction.html
+++ b/eng/under-construction.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="gr" itemscope itemtype="https://schema.org/ProfessionalService">
+<html lang="en" itemscope itemtype="https://schema.org/ProfessionalService">
 <head>
 	<meta charset="utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>OK!Thess | Σελίδα Υπο Κατασκευή</title>
+	<title>OK!Thess | Page Under Construction</title>
 	<meta http-equiv="Content-Type" content="text/html">
-	<meta name="description" content="Οικοσύστημα Καινοτομίας Θεσσαλονίκης - Σελίδα Υπό Κατασκευή">
+	<meta name="description" content="Thessaloniki's Innovation Ecosystem - Page Under Construction">
 	<meta name="robots" content="NOODP">
 	<meta name="author" content="ntemposd">
 
 	<meta itemprop="name" content="ΟΚ!Thess">
-	<meta itemprop="description" content="Οικοσύστημα Καινοτομίας Θεσσαλονίκης - Σελίδα Υπό Κατασκευή">
+	<meta itemprop="description" content="Thessaloniki's Innovation Ecosystem - Page Under Construction">
 	<meta itemprop="image" content="/img/thumb.png">
 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@okthess">
 	<meta name="twitter:creator" content="@ntemposd">
 	<meta name="twitter:title" content="OK!Thess">
-	<meta name="twitter:description" content="Οικοσύστημα Καινοτομίας Θεσσαλονίκης - Σελίδα Υπό Κατασκευή">
+	<meta name="twitter:description" content="Thessaloniki's Innovation Ecosystem - Page Under Construction">
 	<meta name="twitter:image" content="http://www.okthess.gr/img/thumb.png">
 
 	<meta property="og:title" content="ΟΚ!Thess">
-	<meta property="og:description" content="Οικοσύστημα Καινοτομίας Θεσσαλονίκης - Σελίδα Υπό Κατασκευή">
+	<meta property="og:description" content="Thessaloniki's Innovation Ecosystem - Page Under Construction">
 	<meta property="og:url" content="http://okthess.gr">
 	<meta property="og:image" content="/img/thumb.png">
 	<meta property="og:type" content="website">
@@ -49,31 +49,31 @@
      <span class="icon-bar"></span>
 		 <span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo"></a>
+		<a class="navbar-brand" href="/eng/index.html"><img src="/img/logo.png" alt="Logo"></a>
 	</div>
 	 <div class="collapse navbar-collapse" id="navbar-collapse">
 		<ul class="nav navbar-nav navbar-right">
 			<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Σχετικά <b class="caret"></b></a>
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#">About <b class="caret"></b></a>
   				<ul class="dropdown-menu">
-    				<li><a tabindex="-1" href="about.html#collapse0">Τι κάνουμε</a></li>
-    				<li><a tabindex="-1" href="about.html#collapse1">Πως το κάνουμε</a></li>
-    				<li><a tabindex="-1" href="about.html#collapse2">Πως συμμετέχω</a></li>
-						<li><a tabindex="-1" href="about.html#collapse3">Συνεργατικός χώρος</a></li>
-					</ul>
+    				<li><a tabindex="-1" href="/eng/about.html#collapse0">What we do</a></li>
+    				<li><a tabindex="-1" href="/eng/about.html#collapse1">How do we do it?</a></li>
+    				<li><a tabindex="-1" href="/eng/about.html#collapse2">How do I participate?</a></li>
+						<li><a tabindex="-1" href="/eng/about.html#collapse3">Coworking space</a></li>
+      		</ul>
 			</li>
-			<li><a href="teams.html">Ομάδες</a></li>
-      <li><a href="news.html">Νέα</a></li>
-      <li><a href="knowledge-base.html">Γνωσιακή Βάση</a></li>
-			<li><a href="app.php">Συμμετοχή</a></li>
-			<li><a href="hi.php">Επικοινωνία</a></li>
-      <li class="active"><a href="under-construction.html">Μέλη</a></li>
+			<li><a href="/eng/teams.html">Hosted teams</a></li>
+      <li><a href="/eng/news.html">News</a></li>
+      <li><a href="/eng/knowledge-base.html">Knowledge base</a></li>
+			<li><a href="/eng/app.php">To join</a></li>
+			<li><a href="/eng/hi.php">Contact</a></li>
+      <li><a href="/eng/under-construction.html">Members</a></li>
 		</ul>
 	</div>
 </nav>
 <section class="jumbotron">
 <div class="container text-center">
-  <h1>Σελίδα Υπό Κατασκευή</h1>
+  <h1>Page Under Construction</h1>
 </div>
 </section>
 <div class="container text-center">
@@ -89,7 +89,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-4 col-sm-4">
-				<h5>ΤΟΠΟΘΕΣΙΑ</h5>
+				<h5>LOCATION</h5>
 				<hr>
 					<div id="map-outer">
 						<div id="map-container"></div>
@@ -97,23 +97,23 @@
 					</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<h5>ΣΥΝΕΡΓΑΤΕΣ</h5><hr>
-				<a href="https://www.auth.gr/" target="_blank"><img src="/img/AUTH.jpg" alt="Aristotle_University_Thessaloniki"></a>
-				<a href="http://www.thessaloniki.gr/" target="_blank"><img src="/img/municipality.jpg" alt="Municipality_of_Thessaloniki"></a>
-				<a href="http://www.uom.gr/" target="_blank"><img src="/img/UOM.png" alt="University_Of_Macedonia"></a>
-				<a href="http://www.thessinnozone.gr/" target="_blank"><img src="/img/TIZ.jpg" alt="Thessaloniki_Innovation_Zone"></a>
-				<a href="http://www.teithe.gr/" target="_blank"><img src="/img/ATEITH.jpg" alt="Alexander_Technological_Institute_Thessaloniki"></a>
-				<a href="http://www.sbbe.gr/" target="_blank"><img src="/img/SBBE.jpg" alt="SBBE"></a>
-				<a href="http://www.ihu.edu.gr/" target="_blank"><img src="/img/IHU.jpg" alt="International_Hellenic_University"></a>
-				<a href="http://www.seve.gr/" target="_blank"><img src="/img/SEVE.jpg" alt="SEVE"></a>
+				<h5>MEMBERS</h5><hr>
+				<a href="https://www.auth.gr/en" target="_blank"><img src="/eng/img/AUTH.png" alt="Aristotle_University_Thessaloniki"></a>
+				<a href="http://www.thessaloniki.gr/portal/page/portal/EnglishPage" target="_blank"><img src="/eng/img/municipality.jpg" alt="Municipality_of_Thessaloniki"></a>
+				<a href="http://www.uom.gr/index.php?newlang=eng" target="_blank"><img src="/img/UOM.png" alt="University_Of_Macedonia"></a>
+				<a href="http://www.thessinnozone.gr/en/" target="_blank"><img src="/eng/img/TIZ.jpg" alt="Thessaloniki_Innovation_Zone"></a>
+				<a href="http://www.ihu.edu.gr/" target="_blank"><img src="/eng/img/IHU.jpg" alt="International_Hellenic_University"></a>
+				<a href="http://www.teithe.gr/index_en.html" target="_blank"><img src="/img/ATEITH.jpg" alt="Alexander_Technological_Institute_Thessaloniki"></a>
+				<a href="http://en.sbbe.gr/" target="_blank"><img src="/eng/img/SBBE.jpg" alt="SBBE"></a>
+				<a href="http://www.seve.gr/en/" target="_blank"><img src="/eng/img/SEVE.jpg" alt="SEVE"></a>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<h5>ΥΠΟΣΤΗΡΙΚΤΕΣ</h5><hr>
+				<h5>SPONSORS</h5><hr>
 				<a href="http://www.hcn.gr/" target="_blank"><img src="/img/hcn.jpg" alt="HCN"></a>
 				<a href="http://www.beetroot.gr/" target="_blank"><img src="/img/beetroot.png" alt="Beetroot"></a>
-				<a href="https://www.ast.gr/" target="_blank"><img src="/img/ast.png" alt="AST"></a>
-				<h5>ΔΩΡΗΤΗΣ</h5><hr>
-				<a href="http://www.snf.org/el/" target="_blank"><img src="/img/ISN.jpg" alt="ISN"></a>
+				<a href="https://www.ast.gr/en/" target="_blank"><img src="/img/ast.png" alt="AST"></a>
+				<h5>DONOR</h5><hr>
+				<a href="http://www.snf.org/en/" target="_blank"><img src="/img/ISN.jpg" alt="ISN"></a>
 			</div>
 		</div>
 	</div>
