--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="/img/favicon.png" type="image/png" sizes="32x32">
 
 	<title>OK!Thess | Οικοσύστημα Καινοτομίας Θεσσαλονίκης</title>
 	<meta http-equiv="Content-Type" content="text/html">
@@ -29,8 +30,8 @@
 	<meta property="og:type" content="website">
 
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/style/main.css">
-	<link rel="stylesheet" type="text/css" href="/style/landing.css">
+	<link rel="stylesheet" type="text/css" href="http://www.w3schools.com/lib/w3.css">
+		<link rel="stylesheet" type="text/css" href="http://okthess.gr/dev/style/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek,greek-ext" rel="stylesheet">
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -66,94 +67,111 @@
       <li><a href="knowledge-base.html">Γνωσιακή Βάση</a></li>
 			<li><a href="app.php">Συμμετοχή</a></li>
 			<li><a href="hi.php">Επικοινωνία</a></li>
-      <li><a href="under-construction.html">Μέλη</a></li>
 		</ul>
 	</div>
 </nav>
-<span id="beta"><strong>Beta</strong></span>
-<span id="lang"><a href="http://okthess.gr/eng/">Eng</a></span>
-<section class="jumbotron">
-  <div class="container text-center">
-		<h1>Συνεργάτης<br>στα πρώτα βήματα</h1>
-		<p>To OK!Thess παρέχει χώρο και τεχνική υποστήριξη σε ομάδες ανθρώπων με καινοτόμες ιδέες.</p>
-  </div>
-</section>
 <div class="container">
-  <div class="row marketing">
-    <div class="col-md-3 col-sm-6">
-    	<h2 id="land">MITEF<br>Competition</h2>
-      <p>Το MIT Enterprise Forum Greece σε συνεργασία με το Επιχειρηματικό Κέντρο του Anatolia School of Business at the American College of Thessaloniki, σας προσκαλούν στην εκδήλωση παρουσίασης του MITEF Greece Startup Competition.</p>
-      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=1" role="button">Περισσότερα &raquo;</a></p>
-    </div>
-    <div class="col-md-3 col-sm-6">
-      <h2>Agrifood<br>Masterclass</h2>
-      <p>Το ετήσιο Orange Grove Agri-Food Entrepreneurship Masterclass διεξήχθη φέτος για πρώτη φορά στις εγκαταστάσεις του OK!Thess στις 11-14 Νοεμβρίου 2016 και στο οποίο συμμετείχαν ομάδες/νεοφυείς επιχειρήσεις με δραστηριότητα.</p>
-      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=2" role="button">Περισσότερα &raquo;</a></p>
-    </div>
-    <div class="col-md-3 col-sm-6">
-      <h2>Design for<br>Enterprises</h2>
-      <p>Το Κέντρο Επιχειρηματικής και Πολιτιστικής Ανάπτυξης (ΚΕΠΑ) και το OK!Thess, σε συνεργασία με το Design for Enterprises, συνδιοργανώνουν υπό την αιγίδα της Ευρωπαϊκής Επιτροπής το θεματικό εργαστήριο “Design for Enterprises”.</p>
-      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=3" role="button">Περισσότερα &raquo;</a></p>
-    </div>
-		<div class="col-md-3 col-sm-6">
-      <h2>ICEIRD<br>2017</h2>
-      <p>Είσαι ακαδημαϊκός, επιχειρηματίας, επενδυτής ή επιχείρηση που ενδιαφέρεται για τη θεωρία και την πρακτική των δεσμών μεταξύ πανεπιστημίων και βιομηχανίας, καθώς και την καινοτομία, την επιχειρηματικότητα; Κατέθεσε την πρόταση σου μέχρι τις 20 Ιανουαρίου 2017.</p>
-      <p><a class="btn btn-secondary" href="http://okthess.gr/news.html?showmodal=4" role="button">Περισσότερα &raquo;</a></p>
-    </div>
+ <div class="row slice text-center" id="land">
+		 <div class="text-center" id="call">
+	     <h1><strong>Συνεργάτης στα πρώτα βήματα</strong></h1>
+	     <p>To OK!Thess παρέχει χώρο και τεχνική υποστήριξη σε ομάδες ανθρώπων με καινοτόμες ιδέες.</p>
+			 <br>
+	     <p><a class="btn btn-secondary" href="http://okthess.gr/dev/app.php" role="button">Apply Now &raquo;</a></p>
+		 </div>
+ </div>
+ </div>
+ <div class="container">
+ <div class="row" id="1">
+  <div class="col-md-7 slice">
+		<a class="w3-btn-floating w3-hover-dark-grey w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
+	  <a class="w3-btn-floating w3-hover-dark-grey w3-display-right" onclick="plusDivs(1)">&#10095;</a>
+	 	<div class="mySlides">
+	   <img src="http://okthess.gr/dev/img/call.jpg"/>
+	   <div class="w3-display-bottomleft w3-large w3-padding-16 w3-black">
+	    Community Events
+	   </div>
+  	 </div>
+	 	<div class="mySlides">
+	   <img src="http://okthess.gr/dev/img/call.jpg"/>
+	   <div class="w3-display-bottomright w3-large w3-padding-16 w3-black">
+	    Mentoring Sessions
+	   </div>
+	  </div>
+	 	<div class="mySlides">
+	   <img src="http://okthess.gr/dev/img/call.jpg"/>
+	   <div class="w3-display-topleft w3-large w3-padding-16 w3-black">
+	    Accelerator
+	   </div>
+	  </div>
   </div>
-</div>
-<!-- Calendar
-<a name="calendar"></a>
-<section class="row upcoming_recent_events style2">
-    <div class="container">
-        <div class="row sectionTitle text-center">
-            <h6 class="label label-default">SKGTech Events</h6>
-            <h3>Noteworthy events and happenings in the city</h3>
-        </div>
-        <div class="row" id="upcoming-events">
-
-            <div id="event-item">
-            <div class="loading"></div>
-            <div class="col-sm-12 col-md-6 upcoming_events_sizer"></div>
-            <div class="col-sm-12 col-md-6 upcoming_events hide">
-
-                <div class="row event_cover_photo">
-                    <img src="" alt="" class="img-responsive">
-                    <div class="upcoming_label label"><i class="fa fa-calendar"></i> <span>August 15 - 18:00</span></div>
-                    <h6 class="event_time_loc">
-                        <span class="loc">Hosted at: <span class="location"></span></span>
-                    </h6>
-                </div>
-                <h4 class="event_title"><a href="single-event.html"><span>Node.js Meetup</span></a></h4>
-                <p class="event_summery">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dapibus diam, ut fringilla purus efficitur eget. Morbi sagittis mi ac eros semper pharetra. Praesent sed purus purus.</p>
-                <div class="row shareOnRow m0">
-                    <ul class="list-unstyled">
-                        <li>SHARE IT</li>
-                        <li><a class="facebook-url" href="" rel="nofollow" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a class="twitter-url" href="" rel="nofollow" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            </div>
-
-        </div>
-        calendar maintainer shesharp
-        <div class="row maintainer">
-            <div class="col-md-4 col-md-offset-4">
-                <h4>Calendar kindly maintained by</h4>
-                <a href="http://www.shesharp.org/"><img src="/assets/img/shesharp-logo-small.png" alt="shesharp" class="img-responsive center-block"></a>
-
-            </div>
-        </div>
-
+  <div class="col-md-5 text-center slice">
+	 <div id="about">
+	  <h2>Τι κάνουμε</h2>
+	  <p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</p>
+	  <p><a class="btn btn-secondary" href="http://okthess.gr/dev/about.html" role="button">Μάθε περισσότερα &raquo;</a></p>
+   </div>
+  </div>
+ </div>
+ </div>
+ <div class="container">
+ <div class="slice" id="2">
+  <div class="row" id="promote">
+		<div class="col-md-4 col-sm-4 promote">
+			<div class="media">
+			  <div class="media-left">
+			    <img src="http://www.okthess.gr/img/thumb.png" class="media-object">
+			  </div>
+			  <div class="media-body">
+			    <h3 class="media-heading">John Doe</h3>
+			    <p>Lorem ipsum dolor sit amet and do it again and why am I a Rastaman <a href="http://okthess.gr/dev/news.html">Περισσότερα &raquo;</a></p>
+			  </div>
+			</div>
     </div>
-</section>-->
+		<div class="col-md-4 col-sm-4 promote">
+			<div class="media">
+			  <div class="media-left">
+			    <img src="http://www.okthess.gr/img/thumb.png" class="media-object">
+			  </div>
+			  <div class="media-body">
+			    <h4 class="media-heading">John Doe</h4>
+			    <p>Lorem ipsum dolor sit amet and do it again and why am I a Rastaman <a href="http://okthess.gr/dev/news.html">Περισσότερα &raquo;</a></p>
+				</div>
+			</div>
+    </div>
+    <div class="col-md-4 col-sm-4 promote">
+			<div class="media">
+			  <div class="media-left">
+			    <img src="http://www.okthess.gr/img/thumb.png" class="media-object">
+			  </div>
+			  <div class="media-body">
+			    <h4 class="media-heading">John Doe</h4>
+			    <p>Lorem ipsum dolor sit amet and do it again and why am I a Rastaman <a href="http://okthess.gr/dev/news.html">Περισσότερα &raquo;</a></p>
+			  </div>
+			</div>
+ 		</div>
+  </div>
+	<div class="row text-center" id="read">
+  	<p><a class="btn btn-secondary" href="http://okthess.gr/dev/news.html" role="button">Go to Blog &raquo;</a></p>
+  </div>
+ </div>
+ </div>
+ <div class="container">
+ <div class="slice" id="3">
+  <div class="row">
+   <div id="event">event 1 <hr></div>
+	 <div id="event">event 2 <hr></div>
+	 <div id="event">event 3 <hr></div>
+	 <div id="event">event 4 <hr></div>
+	</div>
+ </div>
+ </div>
+</div>
 <footer class="site-footer">
 	<div class="container">
 		<div class="row" id="social">
-			<a href="mailto:mail@okthess.gr" target="_blank"><img social src="/img/email.png" alt="email"></a>
-			<a href="https://www.facebook.com/OKThess/" target="_blank"><img social src="/img/facebook.png" alt="facebook"></a>
-			<a href="https://twitter.com/okthess" target="_blank"><img social src="/img/twitter.png" alt="twitter"></a>
+			<a href="mailto:mail@okthess.gr" target="_blank"><img social src="http://okthess.gr/dev/img/email.png" alt="email"></a>
+			<a href="https://www.facebook.com/OKThess/" target="_blank"><img social src="http://okthess.gr/dev/img/facebook.png" alt="facebook"></a>
+			<a href="https://twitter.com/okthess" target="_blank"><img social src="http://okthess.gr/dev/img/twitter.png" alt="twitter"></a>
 		</div>
 		<div class="row">
 			<div class="col-md-4 col-sm-4">
@@ -166,22 +184,22 @@
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<h5>ΣΥΝΕΡΓΑΤΕΣ</h5><hr>
-				<a href="https://www.auth.gr/" target="_blank"><img src="/img/AUTH.jpg" alt="Aristotle_University_Thessaloniki"></a>
-				<a href="http://www.thessaloniki.gr/" target="_blank"><img src="/img/municipality.jpg" alt="Municipality_of_Thessaloniki"></a>
-				<a href="http://www.uom.gr/" target="_blank"><img src="/img/UOM.png" alt="University_Of_Macedonia"></a>
-				<a href="http://www.thessinnozone.gr/" target="_blank"><img src="/img/TIZ.jpg" alt="Thessaloniki_Innovation_Zone"></a>
-				<a href="http://www.teithe.gr/" target="_blank"><img src="/img/ATEITH.jpg" alt="Alexander_Technological_Institute_Thessaloniki"></a>
-				<a href="http://www.sbbe.gr/" target="_blank"><img src="/img/SBBE.jpg" alt="SBBE"></a>
-				<a href="http://www.ihu.edu.gr/" target="_blank"><img src="/img/IHU.jpg" alt="International_Hellenic_University"></a>
-				<a href="http://www.seve.gr/" target="_blank"><img src="/img/SEVE.jpg" alt="SEVE"></a>
+				<a href="https://www.auth.gr/" target="_blank"><img src="http://okthess.gr/dev/img/AUTH.jpg" alt="Aristotle_University_Thessaloniki"></a>
+				<a href="http://www.thessaloniki.gr/" target="_blank"><img src="http://okthess.gr/dev/img/municipality.jpg" alt="Municipality_of_Thessaloniki"></a>
+				<a href="http://www.uom.gr/" target="_blank"><img src="http://okthess.gr/dev/img/UOM.png" alt="University_Of_Macedonia"></a>
+				<a href="http://www.thessinnozone.gr/" target="_blank"><img src="http://okthess.gr/dev/img/TIZ.jpg" alt="Thessaloniki_Innovation_Zone"></a>
+				<a href="http://www.teithe.gr/" target="_blank"><img src="http://okthess.gr/dev/img/ATEITH.jpg" alt="Alexander_Technological_Institute_Thessaloniki"></a>
+				<a href="http://www.sbbe.gr/" target="_blank"><img src="http://okthess.gr/dev/img/SBBE.jpg" alt="SBBE"></a>
+				<a href="http://www.ihu.edu.gr/" target="_blank"><img src="http://okthess.gr/dev/img/IHU.jpg" alt="International_Hellenic_University"></a>
+				<a href="http://www.seve.gr/" target="_blank"><img src="http://okthess.gr/dev/img/SEVE.jpg" alt="SEVE"></a>
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<h5>ΥΠΟΣΤΗΡΙΚΤΕΣ</h5><hr>
-				<a href="http://www.hcn.gr/" target="_blank"><img src="/img/hcn.jpg" alt="HCN"></a>
-				<a href="http://www.beetroot.gr/" target="_blank"><img src="/img/beetroot.png" alt="Beetroot"></a>
-				<a href="https://www.ast.gr/" target="_blank"><img src="/img/ast.png" alt="AST"></a>
+				<a href="http://www.hcn.gr/" target="_blank"><img src="http://okthess.gr/dev/img/hcn.jpg" alt="HCN"></a>
+				<a href="http://www.beetroot.gr/" target="_blank"><img src="http://okthess.gr/dev/img/beetroot.png" alt="Beetroot"></a>
+				<a href="https://www.ast.gr/" target="_blank"><img src="http://okthess.gr/dev/img/ast.png" alt="AST"></a>
 				<h5>ΔΩΡΗΤΗΣ</h5><hr>
-				<a href="http://www.snf.org/el/" target="_blank"><img src="/img/ISN.jpg" alt="ISN"></a>
+				<a href="http://www.snf.org/el/" target="_blank"><img src="http://okthess.gr/dev/img/ISN.jpg" alt="ISN"></a>
 			</div>
 		</div>
 	</div>
@@ -190,7 +208,7 @@
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7E2raajPS5-4vEpx-LBOV0XkItvWQRt8&signed_in=true&callback=initMap"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="/js/calendarth.min.js"></script>
-<script src="/js/calendar.js"></script>
+<script src="http://www.okthess.gr/dev/js/slider.js"></script>
+</script>
 </body>
 </html>
