--- a/teams.html
+++ b/teams.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="/img/favicon.png" type="image/png" sizes="32x32">
 
 	<title>OK!Thess | Φιλοξενούμενες Ομάδες</title>
 	<meta http-equiv="Content-Type" content="text/html">
@@ -29,8 +30,8 @@
 	<meta property="og:type" content="website">
 
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/style/main.css">
-  <link rel="stylesheet" type="text/css" href="/style/teams.css">
+	<link rel="stylesheet" type="text/css" href="http://okthess.gr/dev/style/main.css">
+	<link rel="stylesheet" type="text/css" href="http://okthess.gr/dev/style/offcanvas.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek,greek-ext" rel="stylesheet">
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -67,52 +68,76 @@
       <li><a href="knowledge-base.html">Γνωσιακή Βάση</a></li>
 			<li><a href="app.php">Συμμετοχή</a></li>
 			<li><a href="hi.php">Επικοινωνία</a></li>
-      <li><a href="under-construction.html">Μέλη</a></li>
 		</ul>
   </div>
 </nav>
-<span id="lang"><a href="http://okthess.gr/eng/teams.html">Eng</a></span>
-<section class="jumbotron">
-  <div class="container">
-		<h1>Φιλοξενούμενες ομάδες</h1>
-		<p>Startups που συμμετέχουν στο πρόγραμμα επιτάχυνσης του OK!Thess.</p>
+<div class="container">
+ <div class="row text-center" id="teams">
+	<div class="text-center" id="call">
+		<h1><strong>Φιλοξενούμενες Ομάδες</strong></h1>
+    <p>Startups που συμμετέχουν στο πρόγραμμα επιτάχυνσης του OK!Thess.</p>
+		<br>
+	</div>
+	<p class="visible-xs pull-right"><button type="button" class="btn btn-primary btn-sm" data-toggle="offcanvas">Θέσεις Εργασίας</button></p>
+ </div>
+</div>
+<div class="container">
+ <div class="row row-offcanvas row-offcanvas-right">
+	<div class="col-xs-12 col-sm-9 album text-muted">
+    <div class="card">
+			<a href="http://www.k-invent.com/" target="_blank">
+      	<img src="/img/teams/kinvent.png" alt="kinvent_logo">
+			</a>
+			<p class="card-text">Στην KINVENT σχεδιάζουμε και δημιουργούμε καινοτόμα προϊόντα ανάλυσης και μέτρησης υψηλής ακρίβειας της ανθρώπινης κίνησης.</p>
+    </div>
+		<div class="card">
+			<a href="https://elektroniowheels.gr/" target="_blank">
+				<img src="/img/teams/electronio.png" alt="electronio_logo">
+			</a>
+			<p class="card-text">Το Elektronio είναι μία βραβευμένη startup, η οποία κατασκευάζει premium ηλεκτρικά ποδήλατα με έναν επαναστατικό σχεδιασμό.</p>
+    </div>
+		<div class="card">
+			<a href="http://www.bio2chp.com" target="_blank">
+				<img src="/img/teams/BIO2CHP.png" alt="BIO2CHP_logo">
+			</a>
+			<p class="card-text">Η BIO2CHP προσφέρει σε επιχειρήσεις με οργανικά απόβλητα μια γεννήτρια η οποία μετατρέπει οργανική ύλη σε χαμηλού κόστους πράσινη ενέργεια.</p>
+    </div>
+		<div class="card">
+			<a href="http://greektasty.com" target="_blank">
+				<img src="/img/teams/Greek-Tasty.png" alt="Greek_Tasty_logo">
+			</a>
+			<p class="card-text">Το Greek Tasty είναι ένα υπερσύγχρονο online store με εκλεκτά Ελληνικά τρόφιμα για την αγορά των Η.Π.Α.</p>
+    </div>
+		<div class="card">
+			<a href="http://www.iboard-realtime.com/" target="_blank">
+				<img src="/img/teams/iboard.png" alt="iboard_logo">
+			</a>
+			<p class="card-text">Το iboard είναι ένα ηλεκτρονικό βοήθημα για θαλάσσια σπορ, που συλλέγει real-time δεδομένα για την καλύτερη κατανόηση των πλεύσεων.</p>
+    </div>
+		<div class="card">
+			<a href="http://doggo.gr/" target="_blank">
+				<img src="/img/teams/doggo.png" alt="doggo_logo">
+			</a>
+			<p class="card-text">Το Doggo είναι το 1o ελληνικό mobile app που απευθύνεται σε ιδιοκτήτες σκύλων και συνδυάζει την κοινωνική δικτύωση με την πληροφόρηση!</p>
+    </div>
   </div>
-</section>
-<div class="album text-muted">
-  <div class="container">
-    <div class="row">
-      <div class="card">
-				<a href="http://www.k-invent.com/" target="_blank">
-        	<img src="/img/teams/kinvent.png" alt="kinvent_logo">
-				</a>
-				<p class="card-text">Στην KINVENT σχεδιάζουμε και δημιουργούμε καινοτόμα προϊόντα ανάλυσης και μέτρησης υψηλής ακρίβειας της ανθρώπινης κίνησης.</p>
-      </div>
-			<div class="card">
-				<a href="https://elektroniowheels.gr/" target="_blank">
-					<img src="/img/teams/electronio.png" alt="electronio_logo">
-				</a>
-				<p class="card-text">Το Elektronio είναι μία βραβευμένη startup, η οποία κατασκευάζει premium ηλεκτρικά ποδήλατα με έναν επαναστατικό σχεδιασμό.</p>
-      </div>
-			<div class="card">
-				<a href="http://www.bio2chp.com" target="_blank">
-					<img src="/img/teams/BIO2CHP.png" alt="BIO2CHP_logo">
-				</a>
-				<p class="card-text">Η BIO2CHP προσφέρει σε επιχειρήσεις με οργανικά απόβλητα μια γεννήτρια η οποία μετατρέπει οργανική ύλη σε χαμηλού κόστους πράσινη ενέργεια.</p>
-      </div>
-			<div class="card">
-				<a href="http://greektasty.com" target="_blank">
-					<img src="/img/teams/Greek-Tasty.png" alt="Greek_Tasty_logo">
-				</a>
-				<p class="card-text">Το Greek Tasty είναι ένα υπερσύγχρονο online store με εκλεκτά Ελληνικά τρόφιμα για την αγορά των Η.Π.Α.</p>
-      </div>
-  </div>
+	<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+		<h4>Θέσεις Εργασίας</h4>
+		<div class="list-group">
+			<small>i-board</small>
+			<a href="http://www.iboard-realtime.com/jobs/electronics-engineer/" target="_blank" class="list-group-item">Electronics Engineer</a>
+			<a href="http://www.iboard-realtime.com/jobs/web-designer/" target="_blank" class="list-group-item">Web Designer</a>
+			<a href="http://www.iboard-realtime.com/jobs/web-developer/" target="_blank" class="list-group-item">Web Developer</a>
+		</div>
+	</div>
+ </div>
 </div>
 <footer class="site-footer">
 	<div class="container">
 		<div class="row" id="social">
-			<a href="mailto:mail@okthess.gr" target="_blank"><img social src="/img/email.png" alt="email"></a>
-			<a href="https://www.facebook.com/OKThess/" target="_blank"><img social src="/img/facebook.png" alt="facebook"></a>
-			<a href="https://twitter.com/okthess" target="_blank"><img social src="/img/twitter.png" alt="twitter"></a>
+			<a href="mailto:mail@okthess.gr" target="_blank"><img social src="http://okthess.gr/dev/img/email.png" alt="email"></a>
+			<a href="https://www.facebook.com/OKThess/" target="_blank"><img social src="http://okthess.gr/dev/img/facebook.png" alt="facebook"></a>
+			<a href="https://twitter.com/okthess" target="_blank"><img social src="http://okthess.gr/dev/img/twitter.png" alt="twitter"></a>
 		</div>
 		<div class="row">
 			<div class="col-md-4 col-sm-4">
@@ -125,22 +150,22 @@
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<h5>ΣΥΝΕΡΓΑΤΕΣ</h5><hr>
-				<a href="https://www.auth.gr/" target="_blank"><img src="/img/AUTH.jpg" alt="Aristotle_University_Thessaloniki"></a>
-				<a href="http://www.thessaloniki.gr/" target="_blank"><img src="/img/municipality.jpg" alt="Municipality_of_Thessaloniki"></a>
-				<a href="http://www.uom.gr/" target="_blank"><img src="/img/UOM.png" alt="University_Of_Macedonia"></a>
-				<a href="http://www.thessinnozone.gr/" target="_blank"><img src="/img/TIZ.jpg" alt="Thessaloniki_Innovation_Zone"></a>
-				<a href="http://www.teithe.gr/" target="_blank"><img src="/img/ATEITH.jpg" alt="Alexander_Technological_Institute_Thessaloniki"></a>
-				<a href="http://www.sbbe.gr/" target="_blank"><img src="/img/SBBE.jpg" alt="SBBE"></a>
-				<a href="http://www.ihu.edu.gr/" target="_blank"><img src="/img/IHU.jpg" alt="International_Hellenic_University"></a>
-				<a href="http://www.seve.gr/" target="_blank"><img src="/img/SEVE.jpg" alt="SEVE"></a>
+  				<a href="https://www.auth.gr/" target="_blank"><img src="http://okthess.gr/dev/img/AUTH.jpg" alt="Aristotle_University_Thessaloniki"></a>
+  				<a href="http://www.thessaloniki.gr/" target="_blank"><img src="http://okthess.gr/dev/img/municipality.jpg" alt="Municipality_of_Thessaloniki"></a>
+  				<a href="http://www.uom.gr/" target="_blank"><img src="http://okthess.gr/dev/img/UOM.png" alt="University_Of_Macedonia"></a>
+  				<a href="http://www.thessinnozone.gr/" target="_blank"><img src="http://okthess.gr/dev/img/TIZ.jpg" alt="Thessaloniki_Innovation_Zone"></a>
+  				<a href="http://www.teithe.gr/" target="_blank"><img src="http://okthess.gr/dev/img/ATEITH.jpg" alt="Alexander_Technological_Institute_Thessaloniki"></a>
+  				<a href="http://www.sbbe.gr/" target="_blank"><img src="http://okthess.gr/dev/img/SBBE.jpg" alt="SBBE"></a>
+  				<a href="http://www.ihu.edu.gr/" target="_blank"><img src="http://okthess.gr/dev/img/IHU.jpg" alt="International_Hellenic_University"></a>
+  				<a href="http://www.seve.gr/" target="_blank"><img src="http://okthess.gr/dev/img/SEVE.jpg" alt="SEVE"></a>
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<h5>ΥΠΟΣΤΗΡΙΚΤΕΣ</h5><hr>
-				<a href="http://www.hcn.gr/" target="_blank"><img src="/img/hcn.jpg" alt="HCN"></a>
-				<a href="http://www.beetroot.gr/" target="_blank"><img src="/img/beetroot.png" alt="Beetroot"></a>
-				<a href="https://www.ast.gr/" target="_blank"><img src="/img/ast.png" alt="AST"></a>
+				<a href="http://www.hcn.gr/" target="_blank"><img src="http://okthess.gr/dev/img/hcn.jpg" alt="HCN"></a>
+				<a href="http://www.beetroot.gr/" target="_blank"><img src="http://okthess.gr/dev/img/beetroot.png" alt="Beetroot"></a>
+				<a href="https://www.ast.gr/" target="_blank"><img src="http://okthess.gr/dev/img/ast.png" alt="AST"></a>
 				<h5>ΔΩΡΗΤΗΣ</h5><hr>
-				<a href="http://www.snf.org/el/" target="_blank"><img src="/img/ISN.jpg" alt="ISN"></a>
+				<a href="http://www.snf.org/el/" target="_blank"><img src="http://okthess.gr/dev/img/ISN.jpg" alt="ISN"></a>
 			</div>
 		</div>
 	</div>
@@ -149,5 +174,6 @@
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7E2raajPS5-4vEpx-LBOV0XkItvWQRt8&signed_in=true&callback=initMap"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="http://www.okthess.gr/dev/js/offcanvas.js"></script>
 </body>
 </html>
